# vid2web

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  custom_styling.py
output/: README.md  index.html  manifest.json  script.js  scripts.js  style.css  styles.css
output/generated_website/: index.html  script.js  scripts.js  style.css  styles.css
scripts/: autoformat.sh
src/video_to_website/: agent.py
src/video_to_website/agents/: architecture_agent.py  code_generator.py  content_extractor.py  refiner_agent.py  validator_agent.py  video_analyzer.py
src/video_to_website/plugins/: context_pruning_plugin.py  model_fallback_plugin.py  stagger_plugin.py
src/video_to_website/prompts/: analysis_prompts.py  generation_prompts.py  validation_prompts.py
src/video_to_website/schemas/: design_tokens.py  site_structure.py  validation_results.py
src/video_to_website/tools/: architecture_tools.py  code_tools.py  component_tools.py  file_tools.py  loop_tools.py  refinement_tools.py  validation_tools.py  video_tools.py
src/video_to_website/ui/: streamlit_app.py
src/video_to_website/utils/: html_utils.py  video_processing.py
tests/: conftest.py
tests/integration/: test_analysis_pipeline.py  test_component_generation.py  test_framework_support.py  test_full_pipeline.py  test_generation_pipeline.py  test_refinement_pipeline.py  test_tool_correctness.py
tests/unit/: test_code_tools.py  test_validation_tools.py  test_video_tools.py
